@@ -1,6 +1,6 @@
 mission,
-vass_vs_random,
 random_vs_vass,
+vass_vs_random,
 random_vs_perturba_elites,
 perturba_elites_vs_random,
 vass_test,
