@@ -1,0 +1,6 @@
+{
+	"title":"Random vs. Vass",
+	"difficulty":"Varying",
+	"icon":"icon.jpg",
+	"background":"graphics/backgrounds/background4.jpg",
+}
