@@ -1,0 +1,21 @@
+{
+  "displayName": "Elite Fighter",
+  "fluxCapacitors": 0,
+  "fluxVents": 0,
+  "goalVariant": true,
+  "hullId": "vass_katzbalger_accel",
+  "hullMods": [],
+  "permaMods": [],
+  "quality": 0,
+  "variantId": "vass_katzbalger_accel_variant",
+  "weaponGroups": [
+    {
+      "autofire": false,
+      "mode": "LINKED",
+      "weapons": {
+        "WS0002": "vass_dyrnwyn"
+      }
+    }
+  ],
+  "wings": []
+}
